force-app/main/default/objects/Contact/fields/ARF_AR_Role__c.field-meta.xml
<CustomField>
    <fullName>ARF_AR_Role__c</fullName>
    <description>Contact role in AR process</description>
    <label>AR Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>AP Contact</fullName><default>false</default><label>AP Contact</label></value>
                <value><fullName>AP Manager</fullName><default>false</default><label>AP Manager</label></value>
                <value><fullName>Controller</fullName><default>false</default><label>Controller</label></value>
                <value><fullName>CFO</fullName><default>false</default><label>CFO</label></value>
                <value><fullName>Buyer</fullName><default>false</default><label>Buyer</label></value>
                <value><fullName>General</fullName><default>false</default><label>General</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>