force-app/main/default/objects/Contact/fields/ARF_Phone_Direct__c.field-meta.xml
<CustomField>
    <fullName>ARF_Phone_Direct__c</fullName>
    <description>Direct phone number for collections</description>
    <label>Direct Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>