force-app/main/default/objects/Contact/fields/ARF_Preferred_Channel__c.field-meta.xml
<CustomField>
    <fullName>ARF_Preferred_Channel__c</fullName>
    <description>Preferred communication channel</description>
    <label>Preferred Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
                <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
                <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>