force-app/main/default/objects/Contact/fields/ARF_Primary_AR_Contact__c.field-meta.xml
<CustomField>
    <fullName>ARF_Primary_AR_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this is the primary AR contact</description>
    <label>Primary AR Contact</label>
    <type>Checkbox</type>
</CustomField>