force-app/main/default/objects/Contact/fields/ARF_SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>ARF_SMS_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether contact has opted into SMS</description>
    <label>SMS Opt-In</label>
    <type>Checkbox</type>
</CustomField>